--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
     margin-top: 40px
 }
 body {
-    background-image: url('C:\Users\scott\gt-pt\homework\scottpwells-portfolio-2020\assets\images\ignasi_pattern_s.png');
-   }
+    background-image: url('assets\css\images\ignasi_pattern_s.png');
+}
 .teal { 
     font: teal;
 }
