--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
     background: #ffffff;
     padding: 20px;
     margin-top: 40px;
-    /* margin-left: -100px; */
     text-align: left;
+    float: left;
 }
 .teal { 
     font: teal;
@@ -18,12 +18,22 @@
     background:teal;
     color: white;   
 }
-
 .img-thumbnail {
     float: left;
 }
 .navbar {
-    max-width: 80%;
+    max-width: 100%;
+    margin-top: 0;
+}
+.card {
+    width: 50%;
+    float: left;
+}
+.card-title {
+    font-family: Arial, Helvetica, sans-serif;
+    color: teal;
+    font-weight: strong;
+    
 }
 
 
