--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,13 @@
     font-family: Arial, Helvetica, sans-serif;
     color: teal;
     font-weight: strong;
-    margin-top: 10px ;
+    margin-top: 10px;
+
+    .no-gutters {
+        margin-right: 0;
+        margin-left: 0;
+      }
+
 
 
 
