attempted to fix margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,12 +33,7 @@
     font-family: Arial, Helvetica, sans-serif;
     color: teal;
     font-weight: strong;
-    margin-top: 10px;
-
-    .no-gutters {
-        margin-right: 0;
-        margin-left: 0;
-      }
+    margin-top: 10px;}
 
 
 
