--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
 }
 .card {
     width: 50%;
-    margin-left: -105px;   
+    right: 10%  
 }
 .card-title {
     font-family: Arial, Helvetica, sans-serif;
