--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@
     padding: 20px;
     margin-top: 40px;
     text-align: left;
-    width: 50%;  
+    width: 500px; 
+    height: 400px; 
 }
 .teal { 
     font: teal;
@@ -20,7 +21,8 @@
     color: white;   
 }
 .img-thumbnail {
-    float: left;
+    display: inline-block;
+    padding: 5px;
 }
 .navbar {
     max-width: 99%;
